assets/scss/modules/_publications.scss
.publications{
    background-color: $dark-blue-6;

    @include breakpoint(small only){
        padding-bottom: 55px;
    }

    .publication-title-container{
        margin: 0 auto;
    }

    .section-title{
        margin-top: 120px;

        @include breakpoint(medium down){
            margin-top: 80px;
        }

        @include breakpoint(small only){
            margin-top: 125px;
        }

        @include breakpoint(360px down){
            margin-bottom: 25px;
        }
    }

    .publications-slider{
        margin-top: 70px;

        @include breakpoint(large down){
            margin-top: 80px;
        }

        @include breakpoint(medium down){
            margin-top: 70px;
        }

        @include breakpoint(small only){
            margin-top: 0;
            display: flex;
            flex-direction: column;

            .bullets-container{
                order: 2;
            }

            .glide__track{
                order: 1;
            }
        }

        @include breakpoint(360px down){
            .bullets-container{
                order: 1;
            }

            .glide__track{
                order: 2;
            }
        }

        .bullets-container {
            margin: 0 auto;
        }

        .glide--slider{
            @include breakpoint(small only){
                display: flex;
                margin-bottom: 125px;
                flex-direction: column-reverse;
            }
        }

    }
}

